--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -39,6 +39,8 @@ calico:
     version: v3.29.1
   v1.31.1:
     version: v3.29.1
+  v1.32.0:
+    version: v3.29.1
 nginx-ingress-controller:
   v1.27.1:
     version: v1.8.4
@@ -89,6 +91,9 @@ nginx-ingress-controller:
     version: v1.11.1
     webhook-version: v1.4.1
   v1.31.1:
+    version: v1.11.1
+    webhook-version: v1.4.1
+  v1.32.0:
     version: v1.11.1
     webhook-version: v1.4.1
 kubernetes-dashboard:
@@ -143,6 +148,9 @@ kubernetes-dashboard:
   v1.31.1:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
+  v1.32.0:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
 local-path-provisioner:
   v1.27.1:
     version: v0.0.25
@@ -193,5 +201,8 @@ local-path-provisioner:
     version: v0.0.27
     busybox-version: 1.34.1
   v1.31.1:
+    version: v0.0.27
+    busybox-version: 1.34.1
+  v1.32.0:
     version: v0.0.27
     busybox-version: 1.34.1
