--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -10,6 +10,8 @@ kubernetes_versions:
     supported: true
   v1.31:
     supported: true
+  v1.32:
+    supported: true
 compatibility_map:
 # This section should be changed manually.
   v1.27.1:
@@ -114,6 +116,12 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.27
     crictl: v1.30.0
+  v1.32.0:
+    calico: v3.29.1
+    nginx-ingress-controller: v1.11.1
+    kubernetes-dashboard: v2.7.0
+    local-path-provisioner: v0.0.27
+    crictl: v1.32.0
 # After any change, please run scripts/thirdparties/sync.py
 
 # The following optional keys are supported in addition to the 5 required software keys:
