--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -39,6 +39,8 @@ containerd:
     version_debian: 1.7.*
   v1.31.1:
     version_debian: 1.7.*
+  v1.32.0:
+    version_debian: 1.7.*
 containerdio:
   v1.27.1:
     version_rhel: 1.6*
@@ -105,6 +107,10 @@ containerdio:
     version_rhel8: 1.6*
     version_rhel9: 1.6*
   v1.31.1:
+    version_rhel: 1.6*
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
+  v1.32.0:
     version_rhel: 1.6*
     version_rhel8: 1.6*
     version_rhel9: 1.6*
