--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -12,7 +12,10 @@ thirdparties:
   crictl: []
 packages:
   containerd:
-    version_debian: []
+    version_debian: 
+    - v1.29.1
+    - v1.29.4
+    - v1.30.1
   containerdio:
     version_rhel: []
     version_rhel8: []
