--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -11,10 +11,11 @@ thirdparties:
   calicoctl: []
   crictl: []
 packages:
-  containerd: 
-  - v1.29.1
-  - v1.29.4
-  - v1.30.1
+  containerd:
+    version_debian:
+    - v1.29.1
+    - v1.29.4
+    - v1.30.1
   containerdio:
     version_rhel: []
     version_rhel8: []
