--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -23,6 +23,8 @@ kube-apiserver:
     version: v1.32.0
   v1.32.2:
     version: v1.32.2
+  v1.33.0:
+    version: v1.33.0
 kube-controller-manager:
   v1.29.1:
     version: v1.29.1
@@ -46,6 +48,8 @@ kube-controller-manager:
     version: v1.32.0
   v1.32.2:
     version: v1.32.2
+  v1.33.0:
+    version: v1.33.0
 kube-scheduler:
   v1.29.1:
     version: v1.29.1
@@ -69,6 +73,8 @@ kube-scheduler:
     version: v1.32.0
   v1.32.2:
     version: v1.32.2
+  v1.33.0:
+    version: v1.33.0
 kube-proxy:
   v1.29.1:
     version: v1.29.1
@@ -92,6 +98,8 @@ kube-proxy:
     version: v1.32.0
   v1.32.2:
     version: v1.32.2
+  v1.33.0:
+    version: v1.33.0
 pause:
   v1.29.1:
     version: '3.9'
@@ -114,6 +122,8 @@ pause:
   v1.32.0:
     version: '3.10'
   v1.32.2:
+    version: '3.10'
+  v1.33.0:
     version: '3.10'
 etcd:
   v1.29.1:
@@ -138,6 +148,8 @@ etcd:
     version: 3.5.16-0
   v1.32.2:
     version: 3.5.16-0
+  v1.33.0:
+    version: 3.5.21-0
 coredns/coredns:
   v1.29.1:
     version: v1.11.1
@@ -161,3 +173,5 @@ coredns/coredns:
     version: v1.11.3
   v1.32.2:
     version: v1.11.3
+  v1.33.0:
+    version: v1.12.0
