--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -27,6 +27,8 @@ calico:
     version: v3.29.1
   v1.32.2:
     version: v3.29.1
+  v1.33.0:
+    version: v3.29.1
 nginx-ingress-controller:
   v1.29.1:
     version: v1.11.5
@@ -61,6 +63,9 @@ nginx-ingress-controller:
   v1.32.2:
     version: v1.11.5
     webhook-version: v1.5.2
+  v1.33.0:
+    version: v1.11.6
+    webhook-version: v1.5.3
 kubernetes-dashboard:
   v1.29.1:
     version: v2.7.0
@@ -93,6 +98,9 @@ kubernetes-dashboard:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
   v1.32.2:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
+  v1.33.0:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
 local-path-provisioner:
@@ -128,4 +136,7 @@ local-path-provisioner:
     busybox-version: 1.34.1
   v1.32.2:
     version: v0.0.27
+    busybox-version: 1.34.1
+  v1.33.0:
+    version: v0.0.31
     busybox-version: 1.34.1
