--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -29,6 +29,11 @@ packages:
     version_debian: false
 plugins:
   calico: []
-  nginx-ingress-controller: []
+  nginx-ingress-controller:
+  - v1.31.1
+  - v1.31.6
+  - v1.32.0
+  - v1.32.2
+  - v1.33.0
   kubernetes-dashboard: []
   local-path-provisioner: []
