--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,24 +1,20 @@
 version: 2
 updates:
-  # Go module in ipip_check
+  # Go
   - package-ecosystem: "gomod"
     directory: "/kubemarine/resources/scripts/source/ipip_check"
     schedule:
       interval: "weekly"
   
-  # Main Dockerfile in root
+  # Dockerfiles
   - package-ecosystem: "docker"
-    directory: "/"
+    directories:
+      - "/"
+      - "/ci"
     schedule:
       interval: "weekly"
   
-  # Dockerfile-transfer in ci directory
-  - package-ecosystem: "docker"
-    directory: "/ci"
-    schedule:
-      interval: "weekly"
-  
-  # Python dependencies (requirements files in repo root)
+  # Python dependencies
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
