--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -11,6 +11,8 @@ kube-apiserver:
     version: v1.32.2
   v1.33.0:
     version: v1.33.0
+  v1.34.0:
+    version: v1.34.0
 kube-controller-manager:
   v1.31.1:
     version: v1.31.1
@@ -22,6 +24,8 @@ kube-controller-manager:
     version: v1.32.2
   v1.33.0:
     version: v1.33.0
+  v1.34.0:
+    version: v1.34.0
 kube-scheduler:
   v1.31.1:
     version: v1.31.1
@@ -33,6 +37,8 @@ kube-scheduler:
     version: v1.32.2
   v1.33.0:
     version: v1.33.0
+  v1.34.0:
+    version: v1.34.0
 kube-proxy:
   v1.31.1:
     version: v1.31.1
@@ -44,6 +50,8 @@ kube-proxy:
     version: v1.32.2
   v1.33.0:
     version: v1.33.0
+  v1.34.0:
+    version: v1.34.0
 pause:
   v1.31.1:
     version: '3.10'
@@ -55,6 +63,8 @@ pause:
     version: '3.10'
   v1.33.0:
     version: '3.10'
+  v1.34.0:
+    version: 3.10.1
 etcd:
   v1.31.1:
     version: 3.5.15-0
@@ -66,6 +76,8 @@ etcd:
     version: 3.5.16-0
   v1.33.0:
     version: 3.5.21-0
+  v1.34.0:
+    version: 3.6.4-0
 coredns/coredns:
   v1.31.1:
     version: v1.11.3
@@ -77,3 +89,5 @@ coredns/coredns:
     version: v1.11.3
   v1.33.0:
     version: v1.12.0
+  v1.34.0:
+    version: v1.12.1
