--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -8,7 +8,8 @@
 # The order of upgrade of defined by the implementation.
 
 thirdparties:
-  calicoctl: []
+  calicoctl:
+  - v1.34.0
   crictl: []
 packages:
   containerd:
@@ -28,7 +29,8 @@ packages:
     version_rhel9: false
     version_debian: false
 plugins:
-  calico: []
+  calico:
+  - v1.34.0
   nginx-ingress-controller: []
   kubernetes-dashboard: []
   local-path-provisioner: []
