--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -12,6 +12,13 @@ thirdparties:
   - v1.33.0
   - v1.34.0
   crictl: []
+  etcdutl:
+  - v1.31.1
+  - v1.31.6
+  - v1.32.0
+  - v1.32.2
+  - v1.33.0
+  - v1.34.0
 packages:
   containerd:
     version_debian: []
