--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -16,36 +16,42 @@ compatibility_map:
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.27
     crictl: v1.30.0
+    etcdutl: v3.6.4
   v1.31.6:
     calico: v3.29.5
     nginx-ingress-controller: v1.12.4
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.27
     crictl: v1.30.0
+    etcdutl: v3.6.4
   v1.32.0:
     calico: v3.29.1
     nginx-ingress-controller: v1.12.4
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.27
     crictl: v1.32.0
+    etcdutl: v3.6.4
   v1.32.2:
     calico: v3.29.5
     nginx-ingress-controller: v1.12.4
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.27
     crictl: v1.32.0
+    etcdutl: v3.6.4
   v1.33.0:
     calico: v3.30.3
     nginx-ingress-controller: v1.13.0
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.31
     crictl: v1.33.0
+    etcdutl: v3.6.4
   v1.34.0:
     calico: v3.30.3
     nginx-ingress-controller: v1.13.1
     kubernetes-dashboard: v2.7.0
     local-path-provisioner: v0.0.32
     crictl: v1.34.0
+    etcdutl: v3.6.4
 # After any change, please run scripts/thirdparties/sync.py
 
 # The following optional keys are supported in addition to the 5 required software keys:
