--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -17,6 +17,8 @@ calico:
     version: v3.30.3
   v1.34.0:
     version: v3.30.3
+  v1.34.1:
+    version: v3.30.3
 nginx-ingress-controller:
   v1.31.1:
     version: v1.12.4
@@ -34,6 +36,9 @@ nginx-ingress-controller:
     version: v1.13.0
     webhook-version: v1.6.0
   v1.34.0:
+    version: v1.13.1
+    webhook-version: v1.6.1
+  v1.34.1:
     version: v1.13.1
     webhook-version: v1.6.1
 kubernetes-dashboard:
@@ -55,6 +60,9 @@ kubernetes-dashboard:
   v1.34.0:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
+  v1.34.1:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
 local-path-provisioner:
   v1.31.1:
     version: v0.0.27
@@ -72,5 +80,8 @@ local-path-provisioner:
     version: v0.0.31
     busybox-version: 1.34.1
   v1.34.0:
+    version: v0.0.32
+    busybox-version: 1.34.1
+  v1.34.1:
     version: v0.0.32
     busybox-version: 1.34.1
