Set containerd 1.7 as default for CentOS 9 / RHEL 9 (#770)
* Update packages.yaml

Change default containerd package version for centos9/rhel9 to 1.7

* Add CentOS9/RHEL9 to Default Dependent Components table.

* Update software_upgrade.yaml

Add patch to upgrade containerd

* Update software_upgrade.yaml

* Update software_upgrade.yaml

* Update software_upgrade.yaml

remove 1.34.0 version

--- a/kubemarine/patches/software_upgrade.yaml
+++ b/kubemarine/patches/software_upgrade.yaml
@@ -17,7 +17,13 @@ packages:
   containerdio:
     version_rhel: []
     version_rhel8: []
-    version_rhel9: []
+    version_rhel9:
+    - v1.31.1
+    - v1.31.6
+    - v1.32.0
+    - v1.32.2
+    - v1.33.0
+    - v1.34.1
   haproxy:
     version_rhel: false
     version_rhel8: false
@@ -33,3 +39,4 @@ plugins:
   nginx-ingress-controller: []
   kubernetes-dashboard: []
   local-path-provisioner: []
+
