--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -13,6 +13,8 @@ kube-apiserver:
     version: v1.33.0
   v1.34.1:
     version: v1.34.1
+  v1.35.0:
+    version: v1.35.0
 kube-controller-manager:
   v1.31.1:
     version: v1.31.1
@@ -26,6 +28,8 @@ kube-controller-manager:
     version: v1.33.0
   v1.34.1:
     version: v1.34.1
+  v1.35.0:
+    version: v1.35.0
 kube-scheduler:
   v1.31.1:
     version: v1.31.1
@@ -39,6 +43,8 @@ kube-scheduler:
     version: v1.33.0
   v1.34.1:
     version: v1.34.1
+  v1.35.0:
+    version: v1.35.0
 kube-proxy:
   v1.31.1:
     version: v1.31.1
@@ -52,6 +58,8 @@ kube-proxy:
     version: v1.33.0
   v1.34.1:
     version: v1.34.1
+  v1.35.0:
+    version: v1.35.0
 pause:
   v1.31.1:
     version: '3.10'
@@ -64,6 +72,8 @@ pause:
   v1.33.0:
     version: '3.10'
   v1.34.1:
+    version: 3.10.1
+  v1.35.0:
     version: 3.10.1
 etcd:
   v1.31.1:
@@ -78,6 +88,8 @@ etcd:
     version: 3.5.21-0
   v1.34.1:
     version: 3.6.4-0
+  v1.35.0:
+    version: 3.6.6-0
 coredns/coredns:
   v1.31.1:
     version: v1.11.3
@@ -91,3 +103,5 @@ coredns/coredns:
     version: v1.12.0
   v1.34.1:
     version: v1.12.1
+  v1.35.0:
+    version: v1.13.1
