--- a/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/kubernetes_images.yaml
@@ -9,10 +9,16 @@ kube-apiserver:
     version: v1.32.0
   v1.32.2:
     version: v1.32.2
+  v1.32.10:
+    version: v1.32.10
   v1.33.0:
     version: v1.33.0
+  v1.33.6:
+    version: v1.33.6
   v1.34.1:
     version: v1.34.1
+  v1.34.2:
+    version: v1.34.2
   v1.35.0:
     version: v1.35.0
 kube-controller-manager:
@@ -24,10 +30,16 @@ kube-controller-manager:
     version: v1.32.0
   v1.32.2:
     version: v1.32.2
+  v1.32.10:
+    version: v1.32.10
   v1.33.0:
     version: v1.33.0
+  v1.33.6:
+    version: v1.33.6
   v1.34.1:
     version: v1.34.1
+  v1.34.2:
+    version: v1.34.2
   v1.35.0:
     version: v1.35.0
 kube-scheduler:
@@ -39,10 +51,16 @@ kube-scheduler:
     version: v1.32.0
   v1.32.2:
     version: v1.32.2
+  v1.32.10:
+    version: v1.32.10
   v1.33.0:
     version: v1.33.0
+  v1.33.6:
+    version: v1.33.6
   v1.34.1:
     version: v1.34.1
+  v1.34.2:
+    version: v1.34.2
   v1.35.0:
     version: v1.35.0
 kube-proxy:
@@ -54,10 +72,16 @@ kube-proxy:
     version: v1.32.0
   v1.32.2:
     version: v1.32.2
+  v1.32.10:
+    version: v1.32.10
   v1.33.0:
     version: v1.33.0
+  v1.33.6:
+    version: v1.33.6
   v1.34.1:
     version: v1.34.1
+  v1.34.2:
+    version: v1.34.2
   v1.35.0:
     version: v1.35.0
 pause:
@@ -69,9 +93,15 @@ pause:
     version: '3.10'
   v1.32.2:
     version: '3.10'
+  v1.32.10:
+    version: '3.10'
   v1.33.0:
     version: '3.10'
+  v1.33.6:
+    version: '3.10'
   v1.34.1:
+    version: 3.10.1
+  v1.34.2:
     version: 3.10.1
   v1.35.0:
     version: 3.10.1
@@ -84,10 +114,16 @@ etcd:
     version: 3.5.16-0
   v1.32.2:
     version: 3.5.16-0
+  v1.32.10:
+    version: 3.5.24-0
   v1.33.0:
     version: 3.5.21-0
+  v1.33.6:
+    version: 3.5.24-0
   v1.34.1:
     version: 3.6.4-0
+  v1.34.2:
+    version: 3.6.5-0
   v1.35.0:
     version: 3.6.6-0
 coredns/coredns:
@@ -99,9 +135,15 @@ coredns/coredns:
     version: v1.11.3
   v1.32.2:
     version: v1.11.3
+  v1.32.10:
+    version: v1.11.3
   v1.33.0:
     version: v1.12.0
+  v1.33.6:
+    version: v1.12.0
   v1.34.1:
+    version: v1.12.1
+  v1.34.2:
     version: v1.12.1
   v1.35.0:
     version: v1.13.1
