--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -13,9 +13,15 @@ containerd:
     version_debian: 1.7.*
   v1.32.2:
     version_debian: 1.7.*
+  v1.32.10:
+    version_debian: 1.7.*
   v1.33.0:
     version_debian: 1.7.*
+  v1.33.6:
+    version_debian: 1.7.*
   v1.34.1:
+    version_debian: 1.7.*
+  v1.34.2:
     version_debian: 1.7.*
   v1.35.0:
     version_debian: 1.7.*
@@ -32,10 +38,19 @@ containerdio:
   v1.32.2:
     version_rhel8: 1.6*
     version_rhel9: 1.7*
+  v1.32.10:
+    version_rhel8: 1.6*
+    version_rhel9: 1.7*
   v1.33.0:
     version_rhel8: 1.6*
     version_rhel9: 1.6*
+  v1.33.6:
+    version_rhel8: 1.6*
+    version_rhel9: 1.6*
   v1.34.1:
+    version_rhel8: 1.6*
+    version_rhel9: 1.7*
+  v1.34.2:
     version_rhel8: 1.6*
     version_rhel9: 1.7*
   v1.35.0:
