--- a/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/plugins.yaml
@@ -13,12 +13,18 @@ calico:
     version: v3.29.1
   v1.32.2:
     version: v3.29.5
+  v1.32.10:
+    version: v3.31.2
   v1.33.0:
     version: v3.30.3
+  v1.33.6:
+    version: v3.31.2
   v1.34.1:
     version: v3.30.3
+  v1.34.2:
+    version: v3.31.2
   v1.35.0:
-    version: v3.30.5
+    version: v3.31.2
 nginx-ingress-controller:
   v1.31.1:
     version: v1.12.4
@@ -32,12 +38,21 @@ nginx-ingress-controller:
   v1.32.2:
     version: v1.12.4
     webhook-version: v1.6.0
+  v1.32.10:
+    version: v1.14.1
+    webhook-version: v1.6.5
   v1.33.0:
     version: v1.13.0
     webhook-version: v1.6.0
+  v1.33.6:
+    version: v1.14.1
+    webhook-version: v1.6.5
   v1.34.1:
     version: v1.13.1
     webhook-version: v1.6.1
+  v1.34.2:
+    version: v1.14.1
+    webhook-version: v1.6.5
   v1.35.0:
     version: v1.14.1
     webhook-version: v1.6.5
@@ -54,10 +69,19 @@ kubernetes-dashboard:
   v1.32.2:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
+  v1.32.10:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
   v1.33.0:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
+  v1.33.6:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
   v1.34.1:
+    version: v2.7.0
+    metrics-scraper-version: v1.0.8
+  v1.34.2:
     version: v2.7.0
     metrics-scraper-version: v1.0.8
   v1.35.0:
@@ -76,10 +100,19 @@ local-path-provisioner:
   v1.32.2:
     version: v0.0.27
     busybox-version: 1.34.1
+  v1.32.10:
+    version: v0.0.32
+    busybox-version: 1.34.1
   v1.33.0:
     version: v0.0.31
     busybox-version: 1.34.1
+  v1.33.6:
+    version: v0.0.32
+    busybox-version: 1.34.1
   v1.34.1:
+    version: v0.0.32
+    busybox-version: 1.34.1
+  v1.34.2:
     version: v0.0.32
     busybox-version: 1.34.1
   v1.35.0:
